test/types/type_variables/diten/assignValToTypeVar.good
assignValToTypeVar.chpl:2: error: illegal assignment of value to type
