test/types/type_variables/diten/assignValToTypeVar.chpl
var a: int = 1;
type b = a;

b = 2;

writeln(b);
